--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -16,6 +17,13 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments["room.incremental"] = "true"
+                arguments["dagger.hilt.disableModulesHaveInstallInCheck"] = "true"
+            }
+        }
     }
 
     buildTypes {
@@ -39,19 +47,19 @@ android {
 }
 
 dependencies {
-    api "com.google.dagger:hilt-android:$rootProject.hiltVersion"
+    implementation 'com.google.dagger:hilt-android:2.38.1'
+    kapt 'com.google.dagger:hilt-compiler:2.38.1'
 
-    kapt "com.google.dagger:hilt-android-compiler:$rootProject.hiltVersion"
-    kapt "androidx.hilt:hilt-compiler:$rootProject.hiltCompilerVersion"
-
+    implementation "androidx.room:room-ktx:$rootProject.roomVersion"
     implementation("androidx.room:room-runtime:$rootProject.roomVersion")
-    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
     kapt("androidx.room:room-compiler:$rootProject.roomVersion")
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+
+    implementation "com.squareup.picasso:picasso:$rootProject.picassoVersion"
 
     implementation "androidx.fragment:fragment-ktx:$rootProject.fragmentVersion"
 
