--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext{
+    ext {
         lifecycleVersion = '2.3.1'
+        picassoVersion = '2.71828'
         fragmentVersion = '1.3.6'
         nav_version = '2.3.5'
         roomVersion = '2.3.0'
@@ -9,13 +10,15 @@ buildscript {
         hiltCompilerVersion = '1.0.0'
     }
     repositories {
+        maven { url 'https://maven.google.com' }
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0"
+        classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
