--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
+    implementation "com.github.skydoves:colorpickerview:2.2.3"
     implementation 'petrov.kristiyan:colorpicker-library:1.1.10'
 
     testImplementation 'junit:junit:4.+'
