--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,9 +73,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation "com.github.skydoves:colorpickerview:2.2.3"
-    implementation 'petrov.kristiyan:colorpicker-library:1.1.10'
 
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
